# string-find

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  string_find.py  string_find_cls.py
tests/: test_string_find.py  test_string_find_cls.py  test_string_find_cls_new.py
