[tool.poetry]
name = "string-search"
version = "0.1.0"
description = "String Search"
authors = ["Mohammed Rishad V K <mohammedrishad.vk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
